[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Instances/PreviewCamera/PreviewCamera.gd" type="Script" id=1]

[node name="PreviewCamera" type="Camera2D"]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="ShakeTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
